--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
-    <div class="container-fluid" data-aos="fade-up">
+    <!-- <div class="container-fluid" data-aos="fade-up"> -->
+    <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-xl-5 col-lg-6 pt-3 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1>AI Tools For Automating Your Business</h1>
@@ -125,8 +126,10 @@
             technologies that includes E-commerce and other website solutions.</h2>
           <div><a href="#about" class="btn-sign-up scrollto">Get Started</a></div>
         </div>
-        <div class="col-xl-5 col-lg-5 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="150">
-          <img src="assets/img/blackweb-dashboard.png" class="img-fluid animated" alt="">
+        <!-- <div class="col-xl-5 col-lg-5 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="150"> -->
+        <div class="col-xl-5 col-lg-5 order-1 order-lg-2 hero-img">
+          <!-- <img src="assets/img/blackweb-dashboard.png" class="img-fluid animated" alt=""> -->
+          <img src="assets/img/blackweb-dashboard.png" class="img-fluid" alt="">
         </div>
       </div>
     </div>
@@ -139,10 +142,12 @@
     <section id="about" class="about">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="150">
+          <!-- <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="150"> -->
+          <div class="col-lg-6 order-1 order-lg-2">
             <img src="assets/img/blackweb-pages.png" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
+          <!-- <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right"> -->
+          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
             <h3>Blackweb Pages</h3>
             <!-- <p class="font-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -164,10 +169,11 @@
     <section id="about" class="about">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="150">
+          <div class="col-lg-6 order-1 order-lg-2" data-aos-delay="150">
             <img src="assets/img/blackweb-sell.png" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
+          <!-- <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right"> -->
+          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
             <h3>Blackweb Sell</h3>
             <ul>
               <li><i class="icofont-check-circled"></i> Focus on the user experience by providing shopping categories,
@@ -183,10 +189,11 @@
     <section id="about" class="about">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="150">
+          <div class="col-lg-6 order-1 order-lg-2" data-aos-delay="150">
             <img src="assets/img/blackweb-forms.png" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
+          <!-- <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right"> -->
+          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
             <h3>Blackweb Forms</h3>
             <ul>
               <li><i class="icofont-check-circled"></i> Create logic for customizing questions per respondent.</li>
@@ -202,10 +209,11 @@
     <section id="about" class="about">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="150">
+          <div class="col-lg-6 order-1 order-lg-2" data-aos-delay="150">
             <img src="assets/img/blackweb-chatbots.png" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
+          <!-- <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right"> -->
+          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
             <h3>Chatbot</h3>
             <ul>
               <li><i class="icofont-check-circled"></i> Integrate with critical systems and orchestrate workflows inside
@@ -277,8 +285,8 @@
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services section-bg">
-      <div class="container" data-aos="fade-up">
-
+      <!-- <div class="container" data-aos="fade-up"> -->
+      <div class="container">
         <div class="section-title">
           <h2>More Services</h2>
           <p>We aren't done yet. Blackweb has a lot more useful services available for you and your business. Help your
@@ -287,7 +295,8 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+          <!-- <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100"> -->
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="icon-box iconbox-blue">
               <div class="icon">
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -303,8 +312,9 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
-            data-aos-delay="200">
+          <!-- <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
+            data-aos-delay="200"> -->
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
             <div class="icon-box iconbox-orange ">
               <div class="icon">
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -319,8 +329,9 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in"
-            data-aos-delay="300">
+          <!-- <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in"
+            data-aos-delay="300"> -->
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="icon-box iconbox-pink">
               <div class="icon">
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -677,18 +688,21 @@
 
     <!-- ======= Pricing Section ======= -->
     <section id="pricing" class="pricing section-bg">
-      <div class="container" data-aos="fade-up">
+      <!-- <div class="container" data-aos="fade-up"> -->
+      <div class="container">
 
         <div class="section-title">
           <h2>Pricing</h2>
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
+            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat
+            sit
             in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
 
-          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="100">
+          <!-- <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="100"> -->
+          <div class="col-lg-3 col-md-6">
             <div class="box">
               <h3>Free</h3>
               <h4><sup>$</sup>0<span> / month</span></h4>
@@ -705,7 +719,8 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="200">
+          <!-- <div class="col-lg-3 col-md-6 mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="200"> -->
+          <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
             <div class="box featured">
               <h3>Business</h3>
               <h4><sup>$</sup>19<span> / month</span></h4>
@@ -722,7 +737,8 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
+          <!-- <div class="col-lg-3 col-md-6 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300"> -->
+          <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
             <div class="box">
               <h3>Developer</h3>
               <h4><sup>$</sup>29<span> / month</span></h4>
@@ -739,7 +755,8 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="400">
+          <!-- <div class="col-lg-3 col-md-6 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="400"> -->
+          <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
             <div class="box">
               <span class="advanced">Advanced</span>
               <h3>Ultimate</h3>
@@ -764,7 +781,8 @@
 
     <!-- ======= Frequently Asked Questions Section ======= -->
     <section id="faq" class="faq">
-      <div class="container" data-aos="fade-up">
+      <!-- <div class="container" data-aos="fade-up"> -->
+      <div class="container">
 
         <div class="section-title">
           <h2>Frequently Asked Questions</h2>
@@ -777,7 +795,8 @@
 
         <div class="faq-list">
           <ul>
-            <li data-aos="fade-up" data-aos="fade-up" data-aos-delay="100">
+            <!-- <li data-aos="fade-up" data-aos="fade-up" data-aos-delay="100"> -->
+            <li>
               <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" class="collapse"
                 href="#faq-list-1">What are Blackweb Pages? <i class="bx bx-chevron-down icon-show"></i><i
                   class="bx bx-chevron-up icon-close"></i></a>
@@ -791,7 +810,8 @@
               </div>
             </li>
 
-            <li data-aos="fade-up" data-aos-delay="200">
+            <!-- <li data-aos="fade-up" data-aos-delay="200"> -->
+            <li>
               <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#faq-list-2"
                 class="collapsed">What is Blackweb Sell? <i class="bx bx-chevron-down icon-show"></i><i
                   class="bx bx-chevron-up icon-close"></i></a>
@@ -805,7 +825,8 @@
               </div>
             </li>
 
-            <li data-aos="fade-up" data-aos-delay="300">
+            <!-- <li data-aos="fade-up" data-aos-delay="300"> -->
+            <li>
               <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#faq-list-3"
                 class="collapsed">What are Blackweb Forms? <i class="bx bx-chevron-down icon-show"></i><i
                   class="bx bx-chevron-up icon-close"></i></a>
@@ -818,7 +839,8 @@
               </div>
             </li>
 
-            <li data-aos="fade-up" data-aos-delay="400">
+            <!-- <li data-aos="fade-up" data-aos-delay="400"> -->
+            <li>
               <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#faq-list-4"
                 class="collapsed">What are Blackweb Chatbots? <i class="bx bx-chevron-down icon-show"></i><i
                   class="bx bx-chevron-up icon-close"></i></a>
@@ -841,7 +863,8 @@
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact section-bg">
-      <div class="container" data-aos="fade-up">
+      <!-- <div class="container" data-aos="fade-up"> -->
+      <div class="container">
 
         <div class="section-title">
           <h2>Contact</h2>
