--- a/index.html
+++ b/index.html
@@ -117,22 +117,20 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
-    <!-- <div class="container-fluid" data-aos="fade-up"> -->
-    <div class="container-fluid">
-      <div class="row justify-content-center">
-        <div class="col-xl-5 col-lg-6 pt-3 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
-          <h1>AI Tools For Automating Your Business</h1>
-          <h2>Blackweb Elite AI is an Artificial Intelligence Product suit of powerful website tools and
-            technologies that includes E-commerce and other website solutions.</h2>
-          <div><a href="#about" class="btn-sign-up scrollto">Get Started</a></div>
-        </div>
-        <!-- <div class="col-xl-5 col-lg-5 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="150"> -->
-        <div class="col-xl-5 col-lg-5 order-1 order-lg-2 hero-img">
-          <!-- <img src="assets/img/blackweb-dashboard.png" class="img-fluid animated" alt=""> -->
-          <img src="assets/img/blackweb-dashboard.png" class="img-fluid" alt="">
+    <div class="container-fluid" data-aos="fade-up">
+      <div class="container-fluid">
+        <div class="row justify-content-center">
+          <div class="col-xl-5 col-lg-6 pt-3 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
+            <h1>AI Tools For Automating Your Business</h1>
+            <h2>Blackweb Elite AI is an Artificial Intelligence Product suit of powerful website tools and
+              technologies that includes E-commerce and other website solutions.</h2>
+            <div><a href="#about" class="btn-sign-up scrollto">Get Started</a></div>
+          </div>
+          <div class="col-xl-5 col-lg-5 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="150">
+            <img src="assets/img/blackweb-dashboard.png" class="img-fluid animated" alt="">
+          </div>
         </div>
       </div>
-    </div>
   </section><!-- End Hero -->
 
   <main id="main">
@@ -142,12 +140,10 @@
     <section id="about" class="about">
       <div class="container">
         <div class="row">
-          <!-- <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="150"> -->
-          <div class="col-lg-6 order-1 order-lg-2">
+          <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="150">
             <img src="assets/img/blackweb-pages.png" class="img-fluid" alt="">
           </div>
-          <!-- <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right"> -->
-          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
+          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
             <h3>Blackweb Pages</h3>
             <!-- <p class="font-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -169,16 +165,17 @@
     <section id="about" class="about">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6 order-1 order-lg-2" data-aos-delay="150">
+          <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="150">
             <img src="assets/img/blackweb-sell.png" class="img-fluid" alt="">
           </div>
           <!-- <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right"> -->
-          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
+          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
             <h3>Blackweb Sell</h3>
             <ul>
               <li><i class="icofont-check-circled"></i> Focus on the user experience by providing shopping categories,
                 filters, and comparison capabilities.</li>
-              <li><i class="icofont-check-circled"></i> Improve search functionality with an autocomplete options.</li>
+              <li><i class="icofont-check-circled"></i> Improve search functionality with an autocomplete options.
+              </li>
               <li><i class="icofont-check-circled"></i> Create effective, visual navigation.</li>
             </ul>
             <a href="#" class="read-more">Learn More <i class="icofont-long-arrow-right"></i></a>
@@ -189,11 +186,10 @@
     <section id="about" class="about">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6 order-1 order-lg-2" data-aos-delay="150">
+          <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="150">
             <img src="assets/img/blackweb-forms.png" class="img-fluid" alt="">
           </div>
-          <!-- <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right"> -->
-          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
+          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
             <h3>Blackweb Forms</h3>
             <ul>
               <li><i class="icofont-check-circled"></i> Create logic for customizing questions per respondent.</li>
@@ -209,11 +205,10 @@
     <section id="about" class="about">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6 order-1 order-lg-2" data-aos-delay="150">
+          <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="150">
             <img src="assets/img/blackweb-chatbots.png" class="img-fluid" alt="">
           </div>
-          <!-- <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right"> -->
-          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
+          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
             <h3>Chatbot</h3>
             <ul>
               <li><i class="icofont-check-circled"></i> Integrate with critical systems and orchestrate workflows inside
@@ -285,8 +280,7 @@
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services section-bg">
-      <!-- <div class="container" data-aos="fade-up"> -->
-      <div class="container">
+      <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>More Services</h2>
           <p>We aren't done yet. Blackweb has a lot more useful services available for you and your business. Help your
@@ -295,8 +289,7 @@
         </div>
 
         <div class="row">
-          <!-- <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100"> -->
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box iconbox-blue">
               <div class="icon">
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -312,9 +305,8 @@
             </div>
           </div>
 
-          <!-- <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
-            data-aos-delay="200"> -->
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
+            data-aos-delay="200">
             <div class="icon-box iconbox-orange ">
               <div class="icon">
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -329,9 +321,8 @@
             </div>
           </div>
 
-          <!-- <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in"
-            data-aos-delay="300"> -->
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in"
+            data-aos-delay="300">
             <div class="icon-box iconbox-pink">
               <div class="icon">
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -688,8 +679,7 @@
 
     <!-- ======= Pricing Section ======= -->
     <section id="pricing" class="pricing section-bg">
-      <!-- <div class="container" data-aos="fade-up"> -->
-      <div class="container">
+      <div class="container" data-aos="fade-up">
 
         <div class="section-title">
           <h2>Pricing</h2>
@@ -701,8 +691,7 @@
 
         <div class="row">
 
-          <!-- <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="100"> -->
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="box">
               <h3>Free</h3>
               <h4><sup>$</sup>0<span> / month</span></h4>
@@ -719,8 +708,7 @@
             </div>
           </div>
 
-          <!-- <div class="col-lg-3 col-md-6 mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="200"> -->
-          <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
+          <div class="col-lg-3 col-md-6 mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="200">
             <div class="box featured">
               <h3>Business</h3>
               <h4><sup>$</sup>19<span> / month</span></h4>
@@ -737,8 +725,7 @@
             </div>
           </div>
 
-          <!-- <div class="col-lg-3 col-md-6 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300"> -->
-          <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
+          <div class="col-lg-3 col-md-6 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
             <div class="box">
               <h3>Developer</h3>
               <h4><sup>$</sup>29<span> / month</span></h4>
@@ -755,8 +742,7 @@
             </div>
           </div>
 
-          <!-- <div class="col-lg-3 col-md-6 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="400"> -->
-          <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
+          <div class="col-lg-3 col-md-6 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="400">
             <div class="box">
               <span class="advanced">Advanced</span>
               <h3>Ultimate</h3>
@@ -781,8 +767,7 @@
 
     <!-- ======= Frequently Asked Questions Section ======= -->
     <section id="faq" class="faq">
-      <!-- <div class="container" data-aos="fade-up"> -->
-      <div class="container">
+      <div class="container" data-aos="fade-up">
 
         <div class="section-title">
           <h2>Frequently Asked Questions</h2>
@@ -795,8 +780,7 @@
 
         <div class="faq-list">
           <ul>
-            <!-- <li data-aos="fade-up" data-aos="fade-up" data-aos-delay="100"> -->
-            <li>
+            <li data-aos="fade-up" data-aos="fade-up" data-aos-delay="100">
               <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" class="collapse"
                 href="#faq-list-1">What are Blackweb Pages? <i class="bx bx-chevron-down icon-show"></i><i
                   class="bx bx-chevron-up icon-close"></i></a>
@@ -810,8 +794,7 @@
               </div>
             </li>
 
-            <!-- <li data-aos="fade-up" data-aos-delay="200"> -->
-            <li>
+            <li data-aos="fade-up" data-aos-delay="200">
               <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#faq-list-2"
                 class="collapsed">What is Blackweb Sell? <i class="bx bx-chevron-down icon-show"></i><i
                   class="bx bx-chevron-up icon-close"></i></a>
@@ -825,8 +808,7 @@
               </div>
             </li>
 
-            <!-- <li data-aos="fade-up" data-aos-delay="300"> -->
-            <li>
+            <li data-aos="fade-up" data-aos-delay="300">
               <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#faq-list-3"
                 class="collapsed">What are Blackweb Forms? <i class="bx bx-chevron-down icon-show"></i><i
                   class="bx bx-chevron-up icon-close"></i></a>
@@ -839,8 +821,7 @@
               </div>
             </li>
 
-            <!-- <li data-aos="fade-up" data-aos-delay="400"> -->
-            <li>
+            <li data-aos="fade-up" data-aos-delay="400">
               <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#faq-list-4"
                 class="collapsed">What are Blackweb Chatbots? <i class="bx bx-chevron-down icon-show"></i><i
                   class="bx bx-chevron-up icon-close"></i></a>
@@ -863,8 +844,7 @@
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact section-bg">
-      <!-- <div class="container" data-aos="fade-up"> -->
-      <div class="container">
+      <div class="container" data-aos="fade-up">
 
         <div class="section-title">
           <h2>Contact</h2>
@@ -905,9 +885,6 @@
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62212.019137975796!2d77.56394765117994!3d12.955771584824943!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae15c191f2d31d%3A0x8e110b99df2fbe22!2sLalbagh%20Botanical%20Garden!5e0!3m2!1sen!2sin!4v1601386360004!5m2!1sen!2sin"
               frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
           </div>
-
-
-
           <div class="col-lg-6">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="form-row">
